<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="236dp"
        android:gravity="center_horizontal"
        android:text="@string/search_txt"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/click"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/Search"
        app:layout_constraintStart_toEndOf="@+id/Search"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/Search"
        android:layout_width="226dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:hint="@string/search_text"
        android:importantForAutofill="no"
        android:inputType="none|text"
        android:textColorHint="#616161"
        android:textSize="24sp"
        app:drawableLeftCompat="@android:drawable/ic_menu_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:background="#C4C0C0" />

</androidx.constraintlayout.widget.ConstraintLayout>